Fixed page width on mobile devices

--- a/css/main.scss
+++ b/css/main.scss
@@ -39,6 +39,7 @@ body {
   background: #dedede;
   border: solid 1px #999;
   margin-bottom: 1rem;
+  overflow-x: auto;
 
   pre {
     margin: 1rem;
